Latest changes after meeting with client

--- a/boilerplate/clients.html
+++ b/boilerplate/clients.html
@@ -43,16 +43,16 @@
                             <h2 class="section-heading clients-heading">OUR CLIENTS AND PARTNERS (PRIME/SUB ROLE)</h2>
                             <ul class="clients-block">
                                 <li>
-                                    <a href="#"><img src="img/caci-logo.png" alt="logo"></a>
+                                    <a href="#"><img src="img/usda-fsa-logo.png" alt="logo"></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="img/cai-logo.png" alt="logo"></a>
+                                    <a href="#"><img src="img/usda-fas-logo.png" alt="logo"></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="img/aphis-logo.png" alt="logo"></a>
                                 </li>
                                 <li>
                                     <a href="#"><img src="img/dhs-logo.png" alt="logo"></a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="img/dlt-logo.png" alt="logo"></a>
                                 </li>
                                 <li>
                                     <a href="#"><img src="img/personal-management-logo1.png" alt="logo"></a>
@@ -60,6 +60,23 @@
                                 <li>
                                     <a href="#"><img src="img/fema-logo.png" alt="logo"></a>
                                 </li>
+                                <li>
+                                    <a href="#"><img src="img/personal-management-logo.png" alt="logo"></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="img/usda-logo.png" alt="logo"></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="img/caci-logo.png" alt="logo"></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="img/cai-logo.png" alt="logo"></a>
+                                </li>
+
+                                <li>
+                                    <a href="#"><img src="img/dlt-logo.png" alt="logo"></a>
+                                </li>
+
                                 <li>
                                     <a href="#"><img src="img/finra.png" alt="logo"></a>
                                 </li>
@@ -69,15 +86,9 @@
                                 <li>
                                     <a href="#"><img src="img/hp.png" alt="logo"></a>
                                 </li>
-                                <li>
-                                    <a href="#"><img src="img/personal-management-logo.png" alt="logo"></a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="img/plateau-logo.png" alt="logo"></a>
-                                </li>
 
                                 <li>
-                                    <a href="#"><img src="img/usda-logo.png" alt="logo"></a>
+                                    <a href="#"><img src="img/plateau-logo.png" alt="logo"></a>
                                 </li>
                             </ul>
                         </div>
