--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -25,7 +25,7 @@
 
                     <!-- HERO UNIT -->
 	<section class="hero-unit-slider slider-responsive no-margin">
-		<div class="introtext hidden-xs hidden-sm">A company with CMMIDEV 3, Certified 8(a), HUBZone, EDWOSB, ANAB, SDB & WOSB, ISO 9001:2008</div>
+		<div class="introtext hidden-xs hidden-sm">AttainX is a SBA 8 (a), HUBZone, WOSB, EDWOSB, CMMI L3 & ISO 9001:2008 certified company.</div>
 			<div class="slick-carousel">
 				<div class="heroImage" role="listbox">
 
@@ -72,7 +72,13 @@
 			</div>
 			<ul>
 				<div>
-					<li><span>7th September 2017 </span> Attainx received CMMI L3 approval.</li>
+					<li><span>30th September 2017 </span>Attainx awarded contract to support Sharepoint Services to USD Foreign Agricultural Services</li>
+				</div>
+				<div>
+					<li><span>29th September 2017 </span>Attainx awarded contract to support Civilian Agency, Secretary for Civil Rights Program Planning and Accountability Division.</li>
+				</div>
+				<div>
+					<li><span>7th September 2017 </span> Attainx received CMMI L3 approval SCAMPI appraisal #30220.</li>
 				</div>
 
 				<div>
@@ -136,11 +142,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<p class="lead">AttainX Inc., is a SBA Certified 8(a), HUBZone, EDWOSB/WOSB small business. AttainX is also a Virginia SWAM Certified and ISO 9001:2008 certified company.</p>
+						<p class="lead">AttainX Inc., is a SBA Certified 8(a), HUBZone, EDWOSB/WOSB small business and CMMI L3, ISO 9001:2008 certified company.</p>
             <p>AttainX delivers information technology solutions to Federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions. We also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
 					</div>
 					<div class="col-md-6">
-						<img src="img/it-dashboard.png" class="img-responsive" alt="Image Intro">
+						<img src="img/devops.jpg" class="img-responsive" alt="Image Intro">
 					</div>
 				</div>
 			</div>
@@ -223,7 +229,7 @@
 				<div class="testimonial slick-carousel">
 					<div class="testimonial-container">
 						<div class="testimonial-body">
-							<p>AttainX Inc., is a SBA Certified 8(a), HUBZone, EDWOSB, SDB & WOSB. We specialize in Information Technology solutions in Software Application Development, Cyber Security, Big Data, DevOps, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
+							<p>We specialize in Information Technology solutions in Software Application Development, Cyber Security, Big Data, DevOps, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
 						</div>
 					</div>
 				</div>
