--- a/boilerplate/news.html
+++ b/boilerplate/news.html
@@ -40,21 +40,23 @@
 				<div class="row">
 					<div class="col-md-9">
 						<ul>
-              <li><span>7th September 2017 </span>Attainx received CMMI L3 approval.</li>
-              <li>27th July 2017 - Attainx awarded prime  USDA contract for Software Development, Software support, project and program management.    Attainx  utilizes Agile software development practices centered on the SCRUM methodology and  maximizes government ROI and customer satisfaction.</li>
-              <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
-              <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
-              <li>March 2017 -   AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
-              <li>February 2017 -  AttainX is recertified for ISO 9001:2008</li>
-              <li>February 2017 - AttainX completes a successful surveillance audit for ISO 9001:2015</li>
-              <li>December 2016 - AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
-              <li>June 2016 - AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
-              <li>June 2016 - AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
-              <li>April 2016 - AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
-              <li>April 2016 - GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
-              <li>February 2016 – AttainX is certified ISO 9001:2008</li>
-              <li>February 2016 - AttainX is certified by the SBA as a HUBZone small business </li>
-            </ul>
+                            <li><span>30th September 2017 </span>Attainx awarded contract to support Sharepoint Services to USD Foreign Agricultural Services</li>
+                            <li><span>29th September 2017 </span>Attainx awarded contract to support Civilian Agency, Secretary for Civil Rights Program Planning and Accountability Division.</li>
+                              <li><span>7th September 2017 </span>Attainx received CMMI L3 approval SCAMPI appraisal #30220.</li>
+                              <li>27th July 2017 - Attainx awarded prime  USDA contract for Software Development, Software support, project and program management.    Attainx  utilizes Agile software development practices centered on the SCRUM methodology and  maximizes government ROI and customer satisfaction.</li>
+                              <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
+                              <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
+                              <li>March 2017 -   AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
+                              <li>February 2017 -  AttainX is recertified for ISO 9001:2008</li>
+                              <li>February 2017 - AttainX completes a successful surveillance audit for ISO 9001:2015</li>
+                              <li>December 2016 - AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
+                              <li>June 2016 - AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
+                              <li>June 2016 - AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
+                              <li>April 2016 - AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
+                              <li>April 2016 - GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
+                              <li>February 2016 – AttainX is certified ISO 9001:2008</li>
+                              <li>February 2016 - AttainX is certified by the SBA as a HUBZone small business </li>
+                        </ul>
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
