USDA spelling corrected

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -72,7 +72,7 @@
 			</div>
 			<ul>
 				<div>
-					<li><span>30th September 2017 </span>Attainx awarded contract to support Sharepoint Services to USD Foreign Agricultural Services</li>
+					<li><span>30th September 2017 </span>Attainx awarded contract to support Sharepoint Services to USDA Foreign Agricultural Services</li>
 				</div>
 				<div>
 					<li><span>29th September 2017 </span>Attainx awarded contract to support Civilian Agency, Secretary for Civil Rights Program Planning and Accountability Division.</li>
