--- a/boilerplate/news.html
+++ b/boilerplate/news.html
@@ -40,7 +40,7 @@
 				<div class="row">
 					<div class="col-md-9">
 						<ul>
-                            <li><span>30th September 2017 </span>Attainx awarded contract to support Sharepoint Services to USD Foreign Agricultural Services</li>
+                            <li><span>30th September 2017 </span>Attainx awarded contract to support Sharepoint Services to USDA Foreign Agricultural Services</li>
                             <li><span>29th September 2017 </span>Attainx awarded contract to support Civilian Agency, Secretary for Civil Rights Program Planning and Accountability Division.</li>
                               <li><span>7th September 2017 </span>Attainx received CMMI L3 approval SCAMPI appraisal #30220.</li>
                               <li>27th July 2017 - Attainx awarded prime  USDA contract for Software Development, Software support, project and program management.    Attainx  utilizes Agile software development practices centered on the SCRUM methodology and  maximizes government ROI and customer satisfaction.</li>
