--- a/boilerplate/careers.html
+++ b/boilerplate/careers.html
@@ -42,16 +42,16 @@
     				<a href="#"><img src="img/adobe-stock/career-main-75954765.jpg" class="img-responsive" alt="featured-image" /></a>
     			   </div>
 
-                            <p><strong>(A) Equal Opportunity Specialists</strong></p>
+                            <p><strong>1. Equal Opportunity Specialists</strong></p>
                             <p><strong>Agency :</strong> Department of Agriculture</p>
                             <p><strong>Location :</strong> Washington DC</p>
                             <p><strong>Experience :</strong></p>
-                            <ol>
+                            <ul>
                                 <li>At least five (5) years of experience working as an attorney (current bar membership not required); or at least five (5) years of experience processing formal EEO complaints pursuant 29 C.F.R. § 1614 and a professional law degree (JD or LLB); and</li>
                                 <li>In addition to above at least three (3) years of experience working on Federal sector EEO matters; and</li>
                                 <li>In addition to above also at least one (1) year of experience reviewing ROIs for legal sufficiency, as identified in 29 C.F.R. § 1614, or two (2) years of experience utilizing ROIs to draft FADs; and</li>
                                 <li>At least two (2) years of Federal sector work experience</li>
-                            </ol>
+                            </ul>
 
                             <p>
                                 Please send your resume to <a href="mailto:staffing@attainx.com">staffing@attainx.com</a>
@@ -59,16 +59,16 @@
 
                             <hr />
 
-                            <p><strong>(B) Equal Opportunity Assistants</strong></p>
+                            <p><strong>2. Equal Opportunity Assistants</strong></p>
                             <p><strong>Agency :</strong> Department of Agriculture</p>
                             <p><strong>Location :</strong> Washington DC</p>
                             <p><strong>Experience :</strong></p>
-                            <ol>
+                            <ul>
                                 <li>At least five (5) years of experience processing formal EEO complaints pursuant 29 C.F.R. § 1614 and</li>
                                 <li>In addition to above at least three (3) years of experience working on Federal sector EEO matters; and</li>
                                 <li>In addition to above also at least one (1) year of experience reviewing ROIs for legal sufficiency, as identified in 29 C.F.R. § 1614, or two (2) years of experience utilizing ROIs to draft FADs; and</li>
                                 <li>At least two (2) years of Federal sector work experience</li>
-                            </ol>
+                            </ul>
 
                             <!-- <p>Agency: Department of Agriculture</p>
                             <p>Location: Washington DC</p>
