Changes done in careers page

--- a/boilerplate/careers.html
+++ b/boilerplate/careers.html
@@ -64,39 +64,17 @@
                             <p><strong>Location :</strong> Washington DC</p>
                             <p><strong>Experience :</strong></p>
                             <ul>
-                                <li>At least five (5) years of experience processing formal EEO complaints pursuant 29 C.F.R. § 1614 and</li>
-                                <li>In addition to above at least three (3) years of experience working on Federal sector EEO matters; and</li>
-                                <li>In addition to above also at least one (1) year of experience reviewing ROIs for legal sufficiency, as identified in 29 C.F.R. § 1614, or two (2) years of experience utilizing ROIs to draft FADs; and</li>
-                                <li>At least two (2) years of Federal sector work experience</li>
+                                <li>At least two (2) years of work experience;</li>
+                                <li>At least twelve (12) or more months experience using all components of MS Office;</li>
+                                <li>At least twelve (12) months EEO experience;</li>
+                                <li>At least twelve (12) months Federal sector experience; and</li>
+                                <li>Legal background.</li>
                             </ul>
-
-                            <!-- <p>Agency: Department of Agriculture</p>
-                            <p>Location: Washington DC</p>
-
-                            <p><strong>(A) Equal Opportunity Specialists</strong></p>
-                            <ol>
-                                <li>At least five (5) years of experience working as an attorney (current bar membership not required); or at least five (5) years of experience processing formal EEO complaints pursuant 29 C.F.R. § 1614 and a professional law degree (JD or LLB); and</li>
-                                <li>At least five (5) years of experience working as an attorney (current bar membership not required); or at least five (5) years of experience processing formal EEO complaints pursuant 29 C.F.R. § 1614 and a professional law degree (JD or LLB); and</li>
-                                <li>In addition to above at least three (3) years of experience working on Federal sector EEO matters; and</li>
-                                <li>In addition to above also at least one (1) year of experience reviewing ROIs for legal sufficiency, as identified in 29 C.F.R. § 1614, or two (2) years of experience utilizing ROIs to draft FADs; and</li>
-                                <li>At least two (2) years of Federal sector work experience</li>
-                            </ol>
 
                             <p>
                                 Please send your resume to <a href="mailto:staffing@attainx.com">staffing@attainx.com</a>
                             </p>
 
-                            <p><strong>(B) Equal Opportunity Assistants</strong></p>
-                            <ol>
-                                <li>At least five (5) years of experience processing formal EEO complaints pursuant 29 C.F.R. § 1614 and</li>
-                                <li>In addition to above at least three (3) years of experience working on Federal sector EEO matters; and</li>
-                                <li>In addition to above also at least one (1) year of experience reviewing ROIs for legal sufficiency, as identified in 29 C.F.R. § 1614, or two (2) years of experience utilizing ROIs to draft FADs; and</li>
-                                <li>At least two (2) years of Federal sector work experience</li>
-                            </ol> -->
-
-                  <p>
-                      Please send your resume to <a href="mailto:staffing@attainx.com">staffing@attainx.com</a>
-                  </p>
       						<br>
 
       					</div>
