Change to ISO 9001:2008 QMS certified

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -25,7 +25,7 @@
 
                     <!-- HERO UNIT -->
 	<section class="hero-unit-slider slider-responsive no-margin">
-		<div class="introtext hidden-xs hidden-sm">AttainX is a SBA 8 (a), HUBZone, WOSB, EDWOSB, CMMI L3 & ISO 9001:2008 certified company.</div>
+		<div class="introtext hidden-xs hidden-sm">AttainX is a SBA 8 (a), HUBZone, WOSB, EDWOSB, CMMI L3 & ISO 9001:2008 QMS certified company.</div>
 			<div class="slick-carousel">
 				<div class="heroImage" role="listbox">
 
@@ -142,7 +142,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<p class="lead">AttainX Inc., is a SBA Certified 8(a), HUBZone, EDWOSB/WOSB small business and CMMI L3, ISO 9001:2008 certified company.</p>
+						<p class="lead">AttainX Inc., is a SBA Certified 8(a), HUBZone, EDWOSB/WOSB small business and CMMI L3, ISO 9001:2008 QMS certified company.</p>
             <p>AttainX delivers information technology solutions to Federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions. We also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
 					</div>
 					<div class="col-md-6">
