ISO QMS changes

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -42,29 +42,6 @@
               </div>
              </div>
 	</section>
-	<!--pacing news on top of heroImage -->
-	<!--<div id="content" class="infocontent hidden-md hidden-xs hidden-sm">
-		<div id="top" class="infolist">
-		<ul>
-		  <li><span>7th September 2017 </span>Attainx received CMMI L3 approval.</li>
-          <li><span>27th July 2017 </span>Attainx awarded prime  USDA contract for Software Development, Software support, project and program management.    Attainx  utilizes Agile software development practices centered on the SCRUM methodology and  maximizes government ROI and customer satisfaction.</li>
-          <li><span>June 2017</span>AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
-          <li><span>May 2017</span>CMMI Level 3 appraisal is in progress</li>
-          <li><span>March 2017</span>AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
-          <li><span>February 2017</span>AttainX is recertified for ISO 9001:2008</li>
-          <li><span>February 2017</span>AttainX completes a successful surveillance audit for ISO 9001:2015</li>
-          <li><span>December 2016</span>AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
-          <li><span>June 2016</span>AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
-          <li><span>June 2016</span>AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
-          <li><span>April 2016</span>AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
-          <li><span>April 2016</span>GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
-          <li><span>February 2016</span>AttainX is certified ISO 9001:2008</li>
-          <li><span>February 2016</span>AttainX is certified by the SBA as a HUBZone small business </li>
-         </ul>
-		</div>
-		<div id="bottom" class="infolist"></div>
-		</div>
-	<!-- END HERO UNIT -->
 
 		<div class="ticker-container hidden-xs hidden-sm">
 			<div class="ticker-caption">
@@ -94,10 +71,10 @@
 				<li><span>March 2017</span> AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
 				</div>
 				<div>
-					<li><span>February 2017</span> AttainX is recertified for ISO 9001:2008</li>
+					<li><span>February 2017</span> AttainX is recertified for ISO 9001:2008 QMS</li>
 				</div>
 				<div>
-					<li><span>February 2017</span> AttainX completes a successful surveillance audit for ISO 9001:2015</li>
+					<li><span>February 2017</span> AttainX completes a successful surveillance audit for ISO 9001:2015 QMS</li>
 				</div>
 				<div>
 					<li><span>December 2016</span> AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
@@ -115,7 +92,7 @@
 					<li><span>April 2016</span> GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
 				</div>
 				<div>
-					<li><span>February 2016</span> AttainX is certified ISO 9001:2008</li>
+					<li><span>February 2016</span> AttainX is certified ISO 9001:2008 QMS</li>
 				</div>
 				<div>
 					<li><span>February 2016</span> AttainX is certified by the SBA as a HUBZone small business </li>
