--- a/boilerplate/news.html
+++ b/boilerplate/news.html
@@ -47,14 +47,14 @@
                               <li>June 2017 - AttainX is invited to the HUBZone National Council held at Capital Hill, Washington DC</li>
                               <li>May 2017 – CMMI Level 3 appraisal is in progress</li>
                               <li>March 2017 -   AttainX's prototype for Big Data solution is appreciated by clients and new development needs have been identified</li>
-                              <li>February 2017 -  AttainX is recertified for ISO 9001:2008</li>
-                              <li>February 2017 - AttainX completes a successful surveillance audit for ISO 9001:2015</li>
+                              <li>February 2017 -  AttainX is recertified for ISO 9001:2008 QMS</li>
+                              <li>February 2017 - AttainX completes a successful surveillance audit for ISO 9001:2015 QMS</li>
                               <li>December 2016 - AttainX partners with the Veterans transition office to help and train Veterans transition to the field of Information Systems and Technologies</li>
                               <li>June 2016 - AttainX is awarded contract Seaport-e IDIQ as part of the OM Group Inc., team</li>
                               <li>June 2016 - AttainX is SWAM certified by the Virginia Department of Small Business and Supplier Diversity </li>
                               <li>April 2016 - AttainX partners with YearUp to empower low-income young adults to join professional careers</li>
                               <li>April 2016 - GSA awards AttainX Schedule IT-70 Contract #GS-35F-293DA</li>
-                              <li>February 2016 – AttainX is certified ISO 9001:2008</li>
+                              <li>February 2016 – AttainX is certified ISO 9001:2008 QMS</li>
                               <li>February 2016 - AttainX is certified by the SBA as a HUBZone small business </li>
                         </ul>
 					</div>
