Index file changed for ISO QMS

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -144,7 +144,7 @@
 						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-globe"></i>
 							<h2 class="boxed-content-title">OUR TEAM</h2>
-							<p>We have highly skilled and experienced team with delivery experience in Federal and State. Our passion is to work with our client in their mission and deliver the best of skills that leads our client to flawless delivery and success at a lower cost. Our commitment to quality and delivery makes us different. Our team has the passion and determination to deliver quality and exceptional outcomes that help our client maintain quality standards and achieve ISO, CMMI and ITIL certifications.</p>
+							<p>We have highly skilled and experienced team with delivery experience in Federal and State. Our passion is to work with our client in their mission and deliver the best of skills that leads our client to flawless delivery and success at a lower cost. Our commitment to quality and delivery makes us different. Our team has the passion and determination to deliver quality and exceptional outcomes that help our client maintain quality standards and achieve ISO QMS, CMMI and ITIL certifications.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
